--- a/index.html
+++ b/index.html
@@ -127,25 +127,40 @@
           <h2 class="work-title section-title">Чим ми займаємося</h2>
           <ul class="work-list list">
             <li>
-              <img
-                src="./images/work/coding.jpg"
-                alt="Розробка програмного забезпечення"
-                width="370"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images/work/coding.jpg"
+                  alt="Розробка програмного забезпечення"
+                  width="370"
+                />
+                <div class="overlay-box">
+                  <p class="overlay-text">Десктопні додатки</p>
+                </div>
+              </div>
             </li>
             <li>
-              <img
-                src="./images/work/apps_for_phone.jpg"
-                alt="Тестування мобільного додатку"
-                width="370"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images/work/apps_for_phone.jpg"
+                  alt="Тестування мобільного додатку"
+                  width="370"
+                />
+                <div class="overlay-box">
+                  <p class="overlay-text">Мобільні додатки</p>
+                </div>
+              </div>
             </li>
             <li>
-              <img
-                src="./images/work/apps_for_tablet.jpg"
-                alt="Робота з палітрою кольорів"
-                width="370"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images/work/apps_for_tablet.jpg"
+                  alt="Робота з палітрою кольорів"
+                  width="370"
+                />
+                <div class="overlay-box">
+                  <p class="overlay-text">Дизайнерські рішення</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
