--- a/portfolio.html
+++ b/portfolio.html
@@ -76,12 +76,21 @@
           <ul class="site-list list">
             <li class="site">
               <a class="site-link link" href="#">
-                <img
-                  src="./images/portfolio/project1.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
+                <div class="visual-content">
+                  <img
+                    src="./images/portfolio/project1.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-site-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="site-container">
                   <h2 class="site-name">Технокряк</h2>
                   <p class="site-type">Веб-сайт</p>
@@ -90,12 +99,21 @@
             </li>
             <li class="site">
               <a class="site-link link" href="#">
-                <img
-                  src="./images/portfolio/project2.jpg"
-                  alt="Постер баскетбол"
-                  width="370"
-                  height="294"
-                />
+                <div class="visual-content">
+                  <img
+                    src="./images/portfolio/project2.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-site-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="site-container">
                   <h2 class="site-name">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
                   <p class="site-type">Дизайн</p>
@@ -104,12 +122,21 @@
             </li>
             <li class="site">
               <a class="site-link link" href="#">
-                <img
-                  src="./images/portfolio/project3.jpg"
-                  alt="Додаток рибний ресторан"
-                  width="370"
-                  height="294"
-                />
+                <div class="visual-content">
+                  <img
+                    src="./images/portfolio/project3.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-site-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="site-container">
                   <h2 class="site-name">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="site-type">Додаток</p>
@@ -118,12 +145,21 @@
             </li>
             <li class="site">
               <a class="site-link link" href="#">
-                <img
-                  src="./images/portfolio/project4.jpg"
-                  alt="Навушники"
-                  width="370"
-                  height="294"
-                />
+                <div class="visual-content">
+                  <img
+                    src="./images/portfolio/project4.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-site-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="site-container">
                   <h2 class="site-name">Проєкт <span lang="en">Prime</span></h2>
                   <p class="site-type">Маркетинг</p>
@@ -132,12 +168,21 @@
             </li>
             <li class="site">
               <a class="site-link link" href="#">
-                <img
-                  src="./images/portfolio/project5.jpg"
-                  alt="Додаток коробки"
-                  width="370"
-                  height="294"
-                />
+                <div class="visual-content">
+                  <img
+                    src="./images/portfolio/project5.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-site-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="site-container">
                   <h2 class="site-name">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="site-type">Додаток</p>
@@ -146,12 +191,21 @@
             </li>
             <li class="site">
               <a class="site-link link" href="#">
-                <img
-                  src="./images/portfolio/project6.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                  height="294"
-                />
+                <div class="visual-content">
+                  <img
+                    src="./images/portfolio/project6.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-site-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="site-container">
                   <h2 class="site-name" lang="en">Inspiration has no Borders</h2>
                   <p class="site-type">Веб-сайт</p>
@@ -160,7 +214,21 @@
             </li>
             <li class="site">
               <a class="site-link link" href="#">
-                <img src="./images/portfolio/project7.jpg" alt="Журнал" width="370" height="294" />
+                <div class="visual-content">
+                  <img
+                    src="./images/portfolio/project7.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-site-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="site-container">
                   <h2 class="site-name">Видання <span lang="en">Limited Edition</span></h2>
                   <p class="site-type">Дизайн</p>
@@ -169,12 +237,21 @@
             </li>
             <li class="site">
               <a class="site-link link" href="#">
-                <img
-                  src="./images/portfolio/project8.jpg"
-                  alt="Етикетка"
-                  width="370"
-                  height="294"
-                />
+                <div class="visual-content">
+                  <img
+                    src="./images/portfolio/project8.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-site-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="site-container">
                   <h2 class="site-name">Проєкт <span lang="en">LAB</span></h2>
                   <p class="site-type">Маркетинг</p>
@@ -183,12 +260,21 @@
             </li>
             <li class="site">
               <a class="site-link link" href="#">
-                <img
-                  src="./images/portfolio/project9.jpg"
-                  alt="Додаток зростаючий бізнес"
-                  width="370"
-                  height="294"
-                />
+                <div class="visual-content">
+                  <img
+                    src="./images/portfolio/project9.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-site-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="site-container">
                   <h2 class="site-name" lang="en">Growing Business</h2>
                   <p class="site-type">Додаток</p>
