--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="button-order" type="button">Замовити послугу</button>
+          <button data-modal-open class="button-order" type="button">Замовити послугу</button>
+          <div data-modal class="backdrop is-hidden">
+            <div class="modal">
+              <button data-modal-close class="close-btn">
+                <svg class="close-icon" width="11" height="11">
+                  <use href="./images/icons.svg#close"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -528,5 +537,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
