--- a/portfolio.html
+++ b/portfolio.html
@@ -297,7 +297,7 @@
             <ul class="adress-list list">
               <li>
                 <a
-                  class="adress-city link"
+                  class="adress-map link"
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -306,12 +306,12 @@
                 </a>
               </li>
               <li class="contact-footer">
-                <a class="contact-email link" href="mailto:info@devstudio.com">
+                <a class="contact-link link" href="mailto:info@devstudio.com">
                   info@devstudio.com</a
                 >
               </li>
               <li class="contact-footer">
-                <a class="contact-phone link" href="tel:+380961111111"> +38 096 111 11 11</a>
+                <a class="contact-link link" href="tel:+380961111111"> +38 096 111 11 11</a>
               </li>
             </ul>
           </address>
